docs/book/samples/ch08/positions.out
error[formatting]: function declarations appear in alphabetical order: `digit?` before `fail`
  --> positions.kso:20:4
  20 | fn digit? none
          ^
